--- a/lojacategorias.html
+++ b/lojacategorias.html
@@ -49,13 +49,15 @@
           <img src="imagens/foto5.png" alt="Preto
           P, M, G, GG   "  class="foto"
          onclick="abrirModal(this)">
-          <button>COMPRAR</button>
+          <button><a class="botao" href="https://api.whatsapp.com/send/?phone=5517992097307&text&type=phone_number&app_absent=0">COMPRAR</a>
+ </button>
         </article>
         <article class="card">
           <img src="imagens/foto1.png" alt="Estampado - 
            P, M, G, GG " class="foto"
          onclick="abrirModal(this)">
-          <button>COMPRAR</button>
+          <button><a class="botao" href="https://api.whatsapp.com/send/?phone=5517992097307&text&type=phone_number&app_absent=0">COMPRAR</a>
+ </button>
         </article>
         <article class="card">
           <img src="imagens/foto61.png" alt="Estampado - 
@@ -396,4 +398,5 @@
     <div id="legenda" class="legenda"></div>
 </body>
 <script src="script.js"></script> 
+
 </html>
