--- a/lojacategorias.html
+++ b/lojacategorias.html
@@ -157,25 +157,25 @@
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="" alt="Rosa Marrom Azul
+          <img src="imagens/foto67.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         </article>
           <article class="card">
-          <img src="" alt="Rosa Marrom Azul
+          <img src="imagens/foto76.png" alt="Rosa Marrom Azul
           M, G, GG  " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="" alt="conjunto de saia" class="foto"
+          <img src="imagens/foto77.png" alt="conjunto de saia" class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="" alt="Rosa Marrom Azul
+          <img src="imagens/foto82.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
@@ -184,44 +184,44 @@
         <h2 id="tshirts">T-shirts</h2>
       <section class="produtos">
         <article class="card">
-          <img src="imagens/foto46.png" alt="Rosa Marrom Azul Roxo Verde Branco
+          <img src="imagens/foto81.png" alt="Rosa Marrom Azul Roxo Verde Branco
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="imagens/foto45.png" alt="Rosa Marrom Azul Vermelho Branco
+          <img src="imagens/foto67.png" alt="Rosa Marrom Azul Vermelho Branco
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
          <button>COMPRAR</button>
          </article>
             <article class="card">
-          <img src="imagens/foto40.png" alt="Rosa Marrom Azul Verde
+          <img src="imagens/foto70.png" alt="Rosa Marrom Azul Verde
           M, G, GG  " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="imagens/foto43.png" alt="Branco Marrom Azul Verde
+          <img src="imagens/foto71.png" alt="Branco Marrom Azul Verde
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         </article>
           <article class="card">
-          <img src="imagens/foto41.png" alt="Rosa Marrom Verde Azul Amarelo Roxo
+          <img src="imagens/foto72.png" alt="Rosa Marrom Verde Azul Amarelo Roxo
           M, G, GG  " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="imagens/foto.png" alt="Rosa Marrom  Branco
+          <img src="imagens/foto73.png" alt="Rosa Marrom  Branco
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="" alt="Rosa Marrom Azul
+          <img src="imagens/foto74.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
@@ -242,32 +242,32 @@
          <button>COMPRAR</button>
          </article>
             <article class="card">
-          <img src="foto13.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto68.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="foto14.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto75.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         </article>
           <article class="card">
-          <img src="foto16.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto78.png" alt="Rosa Marrom Azul
           M, G, GG  " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="foto17.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto80.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="foto18.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto79.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
@@ -282,7 +282,7 @@
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="imagens/foto34.png" alt="Rosa Marrom Azul Branco
+          <img src="imagens/foto65.png" alt="Rosa Marrom Azul Branco
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
          <button>COMPRAR</button>
@@ -301,13 +301,13 @@
         </article>
         </article>
           <article class="card">
-          <img src="imagens/foto55.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto69.png" alt="Rosa Marrom Azul
           M, G, GG  " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
         </article>
         <article class="card">
-          <img src="imagens/foto54.png" alt="Rosa Marrom Azul
+          <img src="imagens/foto64.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
           <button>COMPRAR</button>
@@ -356,8 +356,8 @@
           <img src="imagens/foto38.png" alt="Rosa Marrom Azul
           M, G, GG " class="foto"
          onclick="abrirModal(this)">
-          <button>COMPRAR</button>
- 
+        <button><a class="botao" href="https://api.whatsapp.com/send/?phone=5517992097307&text&type=phone_number&app_absent=0">COMPRAR</a>
+ </button>
         </section>
       </section>
     <section class="apps">
@@ -398,5 +398,4 @@
     <div id="legenda" class="legenda"></div>
 </body>
 <script src="script.js"></script> 
-
 </html>
